implement blog card filter in out stuffs

--- a/src/lib/content/blog/20240202-my-setup.md
+++ b/src/lib/content/blog/20240202-my-setup.md
@@ -2,11 +2,15 @@
 created: '2024-02-02'
 date: '2024-02-02'
 title: 'My 2024 setup'
-excerpt: ''
+excerpt: |
+    asdksafjlkadjncjlkasjxlas
+    sadjkasndkash
+    sajkdsajkdn
+    sadjkhaoij
 layout: blog 
 description: 'My very first blog'
 tags: 
-    - software
+    - Software
 ---
 
 ## Hardware
