add outlines in the first pos

--- a/src/lib/content/blog/20240202-my-setup.md
+++ b/src/lib/content/blog/20240202-my-setup.md
@@ -15,11 +15,44 @@ tags:
 
 ## Hardware
 
+- Only thing I have is a laptop => portable, easy to carry around ->
+  move around alot -> deos not settle in one place 
+- 2 models from dell xps 9570 -> 5 years, from uni days
+- 9520 -> now still happy with this , good performance but nvidia makes
+  the battery worst => but still use it 
+- Give them the specs
+
 ## Software
+- Nvim as my main editor => approx 2 years using those => Vim morions is
+  cool
+- Distro -> Opensuse -> solid (yast brtfs) never break, can roll back
+  has shf system => not like nix
+  - also dua boot windows => can use office or play games on steam => 2
+    main purposes.
+- Do modify some configuration to make it run better on this laptop
+  - some prob with nix => not sure want to delve inro
+  - still can use the power of nix to maintain the stable in the distro
+    (unstable)
+ - support kde is top notch => kde connect is the must if u use android
+- leverage the traditional dot file using tuckr 
+ - still need to figure out how to add nix pkgs and home-manager to
+   tuckr => nix first or tucker or maybe the otherway around
 
-## Distro
+   list some of the tool often use
 
-### Why ?
+- lay all the software written in rust on top of current systen => w/o
+  braking like coreutils 
+
+- because of nvidia => stick to x not switch to wayland
+also best touch pad gesure => fusuma
+
+
+## D.feedkeys.call.run(6
+
+- Flatpak => not abhere to the kde theme
+- snap => priority
+- nix pkg => ok but have some problems with libgx -> wrapper
+
 
 ### Browser
 
