fix: y11n error with blogs images and add summary title for the blog

--- a/src/lib/content/blog/20240202-my-setup.md
+++ b/src/lib/content/blog/20240202-my-setup.md
@@ -13,7 +13,13 @@ tags:
     - Software
 ---
 
+{% overview %}
+this is my first blog and it's the overall introduction message
+{% /overview %}
+
+{% permalink %}
 ## Hardware
+{% /permalink %}
 
 - Only thing I have is a laptop => portable, easy to carry around ->
   move around alot -> deos not settle in one place 
@@ -22,11 +28,13 @@ tags:
   the battery worst => but still use it 
 - Give them the specs
 
+{% permalink %}
 ## Software
+{% /permalink %}
 - Nvim as my main editor => approx 2 years using those => Vim morions is
   cool
 - Distro -> Opensuse -> solid (yast brtfs) never break, can roll back
-  has shf system => not like nix
+  has shf system => not like nix => enable require only in zypper
   - also dua boot windows => can use office or play games on steam => 2
     main purposes.
 - Do modify some configuration to make it run better on this laptop
@@ -47,14 +55,19 @@ tags:
 also best touch pad gesure => fusuma
 
 
+{% permalink %}
 ## D.feedkeys.call.run(6
+{% /permalink %}
 
 - Flatpak => not abhere to the kde theme
 - snap => priority
 - nix pkg => ok but have some problems with libgx -> wrapper
 
 
+
+{% permalink %}
 ### Browser
+{% /permalink %}
 
 Bitwarden
 
