--- a/src/lib/content/blog/20240202-my-setup.md
+++ b/src/lib/content/blog/20240202-my-setup.md
@@ -1,78 +1,117 @@
 ---
 created: '2024-02-02'
-date: '2024-02-02'
+date: '2024-02-09'
 title: 'My 2024 setup'
 excerpt: |
-    asdksafjlkadjncjlkasjxlas
-    sadjkasndkash
-    sajkdsajkdn
-    sadjkhaoij
+    My hardware and software setup this year
 layout: blog 
-description: 'My very first blog'
 tags: 
     - Software
+    - Hardware
 ---
 
 {% overview %}
-this is my first blog and it's the overall introduction message
+With the lunar new year is just around the corner, it got me thinking
+about all the things that help me stay productive and entertained
+throughout the year. So, I thought it'd fun to share my current setup
+that I used both for work and personal use.
 {% /overview %}
 
-{% permalink %}
+{% permalink %} 
 ## Hardware
-{% /permalink %}
+{% /permalink %} 
 
-- Only thing I have is a laptop => portable, easy to carry around ->
-  move around alot -> deos not settle in one place 
-- 2 models from dell xps 9570 -> 5 years, from uni days
-- 9520 -> now still happy with this , good performance but nvidia makes
-  the battery worst => but still use it 
-- Give them the specs
+Unlike most, I don't have a fancy desktop setup due to my nomadic
+lifestyle so a laptop is the only one that I can rely on to stay
+connected on the go. 
+
+My seasonal trusty companion from my oldie
+university days has been the Dell XPS 9570. Recently, I've switched to
+its successor, the 9520. Sure, the Nvidia graphics might drain the
+battery faster and occasionally the driver's upgrade was painful when it
+didn't boot, but hey, sacrifices must be made for other
+GPU-heavy-compting tasks. 
+
+BTW, I ran dual boot on this machine one for
+Linux and the other for Windows. So that I can make use of all of that
+external Nvidia GPU's power.
 
 {% permalink %}
 ## Software
 {% /permalink %}
-- Nvim as my main editor => approx 2 years using those => Vim morions is
-  cool
-- Distro -> Opensuse -> solid (yast brtfs) never break, can roll back
-  has shf system => not like nix => enable require only in zypper
-  - also dua boot windows => can use office or play games on steam => 2
-    main purposes.
-- Do modify some configuration to make it run better on this laptop
-  - some prob with nix => not sure want to delve inro
-  - still can use the power of nix to maintain the stable in the distro
-    (unstable)
- - support kde is top notch => kde connect is the must if u use android
-- leverage the traditional dot file using tuckr 
- - still need to figure out how to add nix pkgs and home-manager to
-   tuckr => nix first or tucker or maybe the otherway around
 
-   list some of the tool often use
+For coding, I've been rocking Neo Vim for over two years now, and it's 
+been a blast - I just fell in love with Vim motions.
 
-- lay all the software written in rust on top of current systen => w/o
-  braking like coreutils 
+I use Opensuse Tumbleweed to stay up to date with the new packages, and 
+kernels while keeping the whole system rock solid. This distro coming 
+along with BTRFS and snapper has been a dream. Rollbacks are a breeze, 
+and the FSHS system is way "saner" than what I experienced with NixOS 
+in the past I can also avoid the headache of setting up the entire
+environment back when I was using Arch. The Nixos 
+[problem](https://discourse.nixos.org/t/the-nixos-foundations-call-to-action-s3-costs-require-community-support/28672)
+with aws s3 cost makes me hesitate to try it again but if things settle 
+down for like 2 years, I will maybe probably try it again.
 
-- because of nvidia => stick to x not switch to wayland
-also best touch pad gesure => fusuma
+Plus, I can use nix and still get to leverage the power of nix-pkg in 
+Opensuse.  (Though, gotta admit, those libgl issues can be tricky, solved
+by nix-wrapper-gl or switching to AppImage/Flatpak if needed.)
 
+With nix on top of OpenSUSE,The new rust-based core-utils package sits 
+happily on top of this setup,  without any breakage. Though, my laptop 
+comes with Nvidia, which means sticking to X for now, no Wayland just yet.
 
-{% permalink %}
-## D.feedkeys.call.run(6
-{% /permalink %}
+Also Opensuse's KDE integration is top-notch, and it comes with the
+pretty handy tool the KDE Connect App. That go along well with my android
+phone.
 
-- Flatpak => not abhere to the kde theme
-- snap => priority
-- nix pkg => ok but have some problems with libgx -> wrapper
+And when it comes to dotfiles, Tuckr is the tool that I used to keep
+things organized. ✨ Though I've still tried to figure out how to
+integrate nix and home-manager with Tuckr.
 
+I also dual-booting with Windows to keep me covered for productivity
+with Office and have fun with Steam games.
+ 
+## Programs
 
+Here are my list of programs or packages as you might say that I think
+they are pretty handy to keep them around:
+- My primary shell is `fish`. Its fuzzy file finder and
+  auto completion are good and the `fish` lang itself are easy to write
+  some simple scripts.
+- `uutils-coreutils` to replace the `coreutils`. So that my scripts can
+  transferred between OSes without any pain 🤭
+- `direnv` to keep environment variables stay at their places.
+- `zoxide` to replace `cd` help to navigating around easier
+- `fzf` is only used in my `neovim` to find the files around a project
+- `bat` is super charged version of `cat` which support colored syntax
+- `fd` is alternative of `find`. That's much faster
+- `eza` is also a good alternative for `ls` for quick directory
+  listings 
 
 {% permalink %}
 ### Browser
 {% /permalink %}
 
-Bitwarden
+My primary browser is Firefox but for the chromium version I use Brave.
+I think they're good browsers that comes with some built-in privacy
+features. Main extension that I am using are:
 
-Ublock origin (hblock)
+- Bitwarden - For keeping my password safe
 
-Theme (Stylesheet)
+- Ublock origin - To block ads in firefox
+
+- For customization, I've used both Stylus and Dark Reader to avoid
+*light-themed* website.
+
+
+---
+Hope you find that interesting. And you got some inspirations about what
+should you do to improve your own setup.
+
+
+**Later until next time!**
+
+
 
 
