Place holder when loading for blogs posts fix some typos

--- a/src/lib/content/blog/20240202-my-setup.md
+++ b/src/lib/content/blog/20240202-my-setup.md
@@ -72,7 +72,9 @@ integrate nix and home-manager with Tuckr.
 I also dual-booting with Windows to keep me covered for productivity
 with Office and have fun with Steam games.
  
+{% permalink %}
 ## Programs
+{% /permalink %}
 
 Here are my list of programs or packages as you might say that I think
 they are pretty handy to keep them around:
@@ -110,7 +112,7 @@ Hope you find that interesting. And you got some inspirations about what
 should you do to improve your own setup.
 
 
-**Later until next time!**
+**Later, until next time!**
 
 
 
