temporary disable ci/cd

--- a/src/lib/content/blog/20240202-my-setup.md
+++ b/src/lib/content/blog/20240202-my-setup.md
@@ -3,11 +3,11 @@ created: '2024-02-02'
 date: '2024-02-09'
 title: 'My 2024 setup'
 excerpt: |
-    My hardware and software setup this year
-layout: blog 
-tags: 
-    - Software
-    - Hardware
+  My hardware and software setup this year
+layout: blog
+tags:
+  - Software
+  - Hardware
 ---
 
 {% overview %}
@@ -17,48 +17,52 @@ throughout the year. So, I thought it'd fun to share my current setup
 that I used both for work and personal use.
 {% /overview %}
 
-{% permalink %} 
+{% permalink %}
+
 ## Hardware
-{% /permalink %} 
+
+{% /permalink %}
 
 Unlike most, I don't have a fancy desktop setup due to my nomadic
 lifestyle so a laptop is the only one that I can rely on to stay
-connected on the go. 
+connected on the go.
 
 My seasonal trusty companion from my oldie
 university days has been the Dell XPS 9570. Recently, I've switched to
 its successor, the 9520. Sure, the Nvidia graphics might drain the
 battery faster and occasionally the driver's upgrade was painful when it
 didn't boot, but hey, sacrifices must be made for other
-GPU-heavy-compting tasks. 
+GPU-heavy-compting tasks.
 
 BTW, I ran dual boot on this machine one for
 Linux and the other for Windows. So that I can make use of all of that
 external Nvidia GPU's power.
 
 {% permalink %}
+
 ## Software
+
 {% /permalink %}
 
-For coding, I've been rocking Neo Vim for over two years now, and it's 
+For coding, I've been rocking Neo Vim for over two years now, and it's
 been a blast - I just fell in love with Vim motions.
 
-I use Opensuse Tumbleweed to stay up to date with the new packages, and 
-kernels while keeping the whole system rock solid. This distro coming 
-along with BTRFS and snapper has been a dream. Rollbacks are a breeze, 
-and the FSHS system is way "saner" than what I experienced with NixOS 
+I use Opensuse Tumbleweed to stay up to date with the new packages, and
+kernels while keeping the whole system rock solid. This distro coming
+along with BTRFS and snapper has been a dream. Rollbacks are a breeze,
+and the FSHS system is way "saner" than what I experienced with NixOS
 in the past I can also avoid the headache of setting up the entire
-environment back when I was using Arch. The Nixos 
+environment back when I was using Arch. The Nixos
 [problem](https://discourse.nixos.org/t/the-nixos-foundations-call-to-action-s3-costs-require-community-support/28672)
-with aws s3 cost makes me hesitate to try it again but if things settle 
-down for like 2 years, I will maybe probably try it again.
+with aws s3 cost makes me hesitate to try it again but if things settle
+down for like 2 years, I will probably give it a go.
 
-Plus, I can use nix and still get to leverage the power of nix-pkg in 
-Opensuse.  (Though, gotta admit, those libgl issues can be tricky, solved
+Plus, I can use nix and still get to leverage the power of nix-pkg in
+Opensuse. (Though, gotta admit, those libgl issues can be tricky, solved
 by nix-wrapper-gl or switching to AppImage/Flatpak if needed.)
 
-With nix on top of OpenSUSE,The new rust-based core-utils package sits 
-happily on top of this setup,  without any breakage. Though, my laptop 
+With nix on top of OpenSUSE,The new rust-based core-utils package sits
+happily on top of this setup, without any breakage. Though, my laptop
 comes with Nvidia, which means sticking to X for now, no Wayland just yet.
 
 Also Opensuse's KDE integration is top-notch, and it comes with the
@@ -71,13 +75,16 @@ integrate nix and home-manager with Tuckr.
 
 I also dual-booting with Windows to keep me covered for productivity
 with Office and have fun with Steam games.
- 
+
 {% permalink %}
+
 ## Programs
+
 {% /permalink %}
 
 Here are my list of programs or packages as you might say that I think
 they are pretty handy to keep them around:
+
 - My primary shell is `fish`. Its fuzzy file finder and
   auto completion are good and the `fish` lang itself are easy to write
   some simple scripts.
@@ -89,10 +96,12 @@ they are pretty handy to keep them around:
 - `bat` is super charged version of `cat` which support colored syntax
 - `fd` is alternative of `find`. That's much faster
 - `eza` is also a good alternative for `ls` for quick directory
-  listings 
+  listings
 
 {% permalink %}
+
 ### Browser
+
 {% /permalink %}
 
 My primary browser is Firefox but for the chromium version I use Brave.
@@ -104,16 +113,11 @@ features. Main extension that I am using are:
 - Ublock origin - To block ads in firefox
 
 - For customization, I've used both Stylus and Dark Reader to avoid
-*light-themed* website.
-
+  _light-themed_ website.
 
 ---
+
 Hope you find that interesting. And you got some inspirations about what
 should you do to improve your own setup.
 
-
 **Later, until next time!**
-
-
-
-
