--- a/src/lib/content/tweet/20240708-ts-types.md
+++ b/src/lib/content/tweet/20240708-ts-types.md
@@ -7,6 +7,6 @@ description: 'Typescript type system quirks'
 pinned: true
 ---
 
-Do you really know Typescript and its type system? Come and check
-[it](/blogs/20240630-typescript-shenanigans 'type safe in type script blog')
+Do you really know Typescript and its type system? Come and check my new
+[blog](/blogs/20240630-typescript-shenanigans 'type safe in type script blog')
 out to help enforce type safety to your next project 👋
